# c-logger

./: CMakeLists.txt  CMakePresets.json
cmake/: utils.cmake
configurations/: c_logger_config.h.in  clang_tidy.yml
src/: CMakeLists.txt
src/logger/: CMakeLists.txt  logger.c
src/logger/include/: logger.h
test/: CMakeLists.txt
test/logger_test/: CMakeLists.txt  logger_test.cpp
